fix dropdown global overlay z-index

--- a/src/shared/components/Dropdown/index.scss
+++ b/src/shared/components/Dropdown/index.scss
@@ -99,3 +99,7 @@
 .custom-dropdown-wrapper__menu-item--active {
   background-color: $light-gray-6;
 }
+
+.custom-dropdown-wrapper__global-overlay {
+  z-index: $dropdown-z-index - 1;
+}
